[package]
name = "rust-client"
version = "0.4.2"
edition = "2018"

[features]
devnet = []

[dependencies]
anchor-lang = {version = "0.25.0"}
anchor-spl = {version = "0.25.0"}
anchor-client = {version = "0.25.0"}
anyhow = "1.0"
clap = {version = "3.0.10", features=["derive"]}
mercurial-vault = { path = "../programs/vault"}
shellexpand = "2.1.0"
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
rust_decimal="1.20.0"
port-variable-rate-lending-instructions = "0.3.0"
apricot-client = {git="https://github.com/mercurial-finance/apricot-client", rev="ecc9f4b9bcc8ff5ddc03ab0525b7c2ae5fa8995b"}
solend-program = { git="https://github.com/mercurial-finance/solana-program-library", rev ="68f815523377428f29cb6db1803f1d5de509ea5f", features = [ "no-entrypoint" ] }
bincode = "^1.3.1"
tulipv2-sdk-common = { git = "https://github.com/mercurial-finance/tulipv2-sdk", rev="0128ea547a0d01bcaf704b5d71d73ca0472d027a"}
tulipv2-sdk-lending = { git = "https://github.com/mercurial-finance/tulipv2-sdk", rev="0128ea547a0d01bcaf704b5d71d73ca0472d027a"}
# Need to lock this because switchboard-program have relaxed dependency version on switchboard-utils. Cargo will automatically resolved it to 0.1.37 which as_bytes_mut function was removed. Ideally, this should be fixed by switchboard
switchboard-utils = "=0.1.32"