[package]
name = "rust-client"
version = "0.5.0"
edition = "2018"

[features]
devnet = []

[dependencies]
anchor-lang = {version = "0.28.0"}
anchor-spl = {version = "0.28.0"}
anchor-client = {version = "0.28.0"}
anyhow = "1.0"
clap = {version = "3.0.10", features=["derive"]}
mercurial-vault = { path = "../programs/vault", features = ["cpi"] }
shellexpand = "2.1.0"
spl-associated-token-account = { version = "2.1.0", features = ["no-entrypoint"] }
rust_decimal="1.20.0"
bincode = "^1.3.1"