[package]
name = "mercurial-vault"
version = "0.4.6"
description = "Created with Anchor"
edition = "2018"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "mercurial_vault"
licence = "MIT"
version = "0.0.1"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []
devnet = []
staging = []
no-capture = []

[dependencies]
serde = { version = "1.0.136" }
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
psylend-cpi={git="https://github.com/MeteoraAg/PsyLendCPIExamples", rev="17aa0b6a87b8342b32558847e00c15303b451b95", features= ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "~1.14.12"
assert_matches = "1.5.0"
async-trait = "0.1.52"
solana-sdk = "~1.14.12"
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }