[package]
name = "mercurial-vault"
version = "0.5.0"
description = "Created with Anchor"
edition = "2018"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "mercurial_vault"
licence = "MIT"
version = "0.0.1"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []
devnet = []
staging = []
no-capture = []

[dependencies]
serde = { version = "1.0.136" }
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"